Atualização dos Controllers

--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,10 @@
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
-        }
+        },
+        "files": [
+            "app/Helpers/OpenAIHelper.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
